# tetron-systray

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
contrib/: com.tetron.systray.plist  tetron-systray.service
docs/: HOWTO.md  HOWTO_Build_A_Systray.md
src/: invite.rs  ipc_client.rs  main.rs  service.rs
